--- a/.github/workflows/packsquash.yml
+++ b/.github/workflows/packsquash.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Run PackSquash
         uses: ComunidadAylas/PackSquash-action@v4
         with:
-          packsquash_version: latest
+          packsquash_version: latest-unstable
           options: |
             # Optimize the pack in the root repository directory.
             # This is the default value for pack_directory when no PackSquash options are defined
